// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inbox filters conversations based on course 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              All
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Starred
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        />
        <View
          accessibilityLabel="Clear Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Clear Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <list>
      <item>
        <TouchableHighlight
          accessibilityLabel="May 31, 2037, learn to write code"
          onPress={[Function]}
          testID="inbox.conversation-1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                },
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
                Object {
                  "borderTopColor": "#C7CDD1",
                  "borderTopWidth": 0.5,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "height": 40,
                  "marginRight": 16,
                  "width": 40,
                }
              }
            >
              <View
                accessibilityLabel=""
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#F5F5F5",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "http://www.fillmurray.com/200/300",
                    }
                  }
                  style={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontFamily": "Lato-Regular",
                          "fontSize": 16,
                        },
                        Object {
                          "flex": 1,
                          "fontSize": 16,
                          "fontWeight": "600",
                          "marginBottom": 2,
                        },
                      ]
                    }
                    testID="ConversationRow.1.names"
                  >
                    artorias of the abyss, solaire of astora
                  </Text>
                  <View>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontFamily": "Lato-Regular",
                            "fontSize": 16,
                          },
                          Object {
                            "color": "#556572",
                            "flexShrink": 0,
                            "fontSize": 12,
                          },
                        ]
                      }
                      testID="ConversationRow.1.date"
                    >
                      5/31/2037
                    </Text>
                  </View>
                </View>
              </View>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": 2,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                learn to write code
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#556572",
                      "fontSize": 14,
                      "marginBottom": 3,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                this is the worst class ever
              </Text>
            </View>
          </View>
        </TouchableHighlight>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`Inbox refreshed component 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              All
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Starred
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          All Courses
        </Text>
        <View
          accessibilityLabel="Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 400,
            "justifyContent": "center",
            "paddingHorizontal": 50,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "emailLine",
            }
          }
          style={
            Object {
              "height": 96,
              "marginBottom": 18,
              "tintColor": "#C7CDD1",
              "width": 96,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 4,
                "textAlign": "center",
              },
            ]
          }
        >
          No Messages
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          Tap the "+" to create a new conversation
        </Text>
      </View>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`Inbox renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              All
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Starred
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          All Courses
        </Text>
        <View
          accessibilityLabel="Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <list>
      <item>
        <TouchableHighlight
          accessibilityLabel="May 31, 2037, learn to write code"
          onPress={[Function]}
          testID="inbox.conversation-1"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                },
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
                Object {
                  "borderTopColor": "#C7CDD1",
                  "borderTopWidth": 0.5,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "height": 40,
                  "marginRight": 16,
                  "width": 40,
                }
              }
            >
              <View
                accessibilityLabel=""
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#F5F5F5",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "http://www.fillmurray.com/200/300",
                    }
                  }
                  style={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontFamily": "Lato-Regular",
                          "fontSize": 16,
                        },
                        Object {
                          "flex": 1,
                          "fontSize": 16,
                          "fontWeight": "600",
                          "marginBottom": 2,
                        },
                      ]
                    }
                    testID="ConversationRow.1.names"
                  >
                    artorias of the abyss, solaire of astora
                  </Text>
                  <View>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontFamily": "Lato-Regular",
                            "fontSize": 16,
                          },
                          Object {
                            "color": "#556572",
                            "flexShrink": 0,
                            "fontSize": 12,
                          },
                        ]
                      }
                      testID="ConversationRow.1.date"
                    >
                      5/31/2037
                    </Text>
                  </View>
                </View>
              </View>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": 2,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                learn to write code
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#556572",
                      "fontSize": 14,
                      "marginBottom": 3,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                this is the worst class ever
              </Text>
            </View>
          </View>
        </TouchableHighlight>
      </item>
      <item>
        <TouchableHighlight
          accessibilityLabel="May 31, 2037, learn to write code"
          onPress={[Function]}
          testID="inbox.conversation-2"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "flex-start",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingBottom": 8,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 8,
                },
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "height": 40,
                  "marginRight": 16,
                  "width": 40,
                }
              }
            >
              <View
                accessibilityLabel=""
                style={
                  Array [
                    Object {
                      "overflow": "hidden",
                    },
                    Object {
                      "backgroundColor": "#F5F5F5",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "http://www.fillmurray.com/200/300",
                    }
                  }
                  style={
                    Object {
                      "height": 40,
                      "width": 40,
                    }
                  }
                />
              </View>
            </View>
            <View
              style={
                Object {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "column",
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 1,
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      Array [
                        Object {
                          "color": "#2D3B45",
                          "fontFamily": "Lato-Regular",
                          "fontSize": 16,
                        },
                        Object {
                          "flex": 1,
                          "fontSize": 16,
                          "fontWeight": "600",
                          "marginBottom": 2,
                        },
                      ]
                    }
                    testID="ConversationRow.2.names"
                  >
                    artorias of the abyss, solaire of astora
                  </Text>
                  <View>
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#2D3B45",
                            "fontFamily": "Lato-Regular",
                            "fontSize": 16,
                          },
                          Object {
                            "color": "#556572",
                            "flexShrink": 0,
                            "fontSize": 12,
                          },
                        ]
                      }
                      testID="ConversationRow.2.date"
                    >
                      5/31/2037
                    </Text>
                  </View>
                </View>
              </View>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#2D3B45",
                      "fontSize": 14,
                      "fontWeight": "600",
                      "marginBottom": 2,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                learn to write code
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#556572",
                      "fontSize": 14,
                      "marginBottom": 3,
                      "marginTop": 3,
                    },
                  ]
                }
              >
                this is the worst class ever
              </Text>
            </View>
          </View>
        </TouchableHighlight>
      </item>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`Inbox renders the activity indicator when loading conversations 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              All
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Starred
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          All Courses
        </Text>
        <View
          accessibilityLabel="Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Inbox renders the starred empty state 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              All
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              Starred
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          All Courses
        </Text>
        <View
          accessibilityLabel="Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 400,
            "justifyContent": "center",
            "paddingHorizontal": 50,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "emailLine",
            }
          }
          style={
            Object {
              "height": 96,
              "marginBottom": 18,
              "tintColor": "#C7CDD1",
              "width": 96,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 4,
                "textAlign": "center",
              },
            ]
          }
        >
          No Starred Messages
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          Star messages by tapping the star in the message.
        </Text>
      </View>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`Inbox renders with an empty state 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "height": 44,
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "alignItems": "center",
            "flex": 0,
          }
        }
        horizontal={true}
      >
        <View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": true,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-all"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                    Object {
                      "color": "#008EE2",
                    },
                  ],
                ]
              }
            >
              All
            </Text>
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "#008EE2",
                    "bottom": 0,
                    "height": 3,
                    "left": 8,
                    "position": "absolute",
                    "right": 8,
                  },
                  Object {
                    "backgroundColor": "#008EE2",
                  },
                ]
              }
            />
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-unread"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Unread
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-starred"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Starred
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-sent"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Sent
            </Text>
          </View>
          <View
            accessibilityRole={
              Array [
                "button",
              ]
            }
            accessibilityState={
              Object {
                "selected": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
            testID="inbox.filter-btn-archived"
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Archived
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "paddingBottom": 8,
          "paddingHorizontal": 16,
          "paddingTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 24,
                "fontWeight": "800",
              },
              Object {
                "flex": 1,
              },
            ]
          }
        >
          All Courses
        </Text>
        <View
          accessibilityLabel="Filter Inbox"
          accessibilityRole="button"
          accessible={true}
          focusable={true}
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexShrink": 0,
              "marginBottom": 1,
              "marginLeft": 8,
              "opacity": 1,
            }
          }
          testID="inbox.filterByCourse"
        >
          <View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#008EE2",
                      "fontSize": 16,
                      "fontWeight": "500",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Filter
            </Text>
          </View>
        </View>
      </View>
    </View>
    <list>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "height": 400,
            "justifyContent": "center",
            "paddingHorizontal": 50,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "emailLine",
            }
          }
          style={
            Object {
              "height": 96,
              "marginBottom": 18,
              "tintColor": "#C7CDD1",
              "width": 96,
            }
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "fontSize": 24,
                "fontWeight": "600",
                "marginBottom": 4,
                "textAlign": "center",
              },
            ]
          }
        >
          No Messages
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Object {
                "color": "#556572",
                "fontSize": 16,
                "textAlign": "center",
              },
            ]
          }
        >
          Tap the "+" to create a new conversation
        </Text>
      </View>
    </list>
  </View>
</RCTSafeAreaView>
`;
